# task_management_app

./: .env.example  README.md  compose.test.yaml  compose.yaml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  app_main._py_  routes.py
backend/app/models/: __init__.py  models.py  task.py  user.py
backend/tests/: test_registration.py  test_routes.py
certbot/: .gitignore
database/: init_user.sql
database/initdb/: init_user.sh
filebeat/: Dockerfile  filebeat.yml
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/deploy/: Dockerfile.back
frontend/src/: TaskList.js  TaskList.test.js
logstash/: Dockerfile  logstash.conf
nginx/: .gitignore  create_sert.sh  nginx.conf
nginx/conf.d/: default.conf
prometheus/: prometheus.yml
