[project]
name = "task-man-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "atoptun",email = "topa1978@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "tabulate (>=0.9.0,<0.10.0)",
    "mmh3 (>=5.2.0,<6.0.0)",
    "datasketch (>=1.6.5,<2.0.0)",
    "memory-profiler (>=0.61.0,<0.62.0)",
    "psutil (>=7.1.1,<8.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "flask-testing (>=0.8.1,<0.9.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
